[tool.poetry]
name = "oss-research"
version = "0.1.0"
description = ""
authors = ["Regev Golan <look4regev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.5"
networkx = "^2.4"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
